public/css/main.css
/* Simple dashboard grid CSS */


/* Assign grid instructions to our parent grid container */
.grid-container {
    font-family: Sans-serif;
    height: 100%;
    display: grid;
    grid-template-columns: 200px 1fr;
    grid-template-rows: 50px 1fr 50px;
    grid-auto-columns: minmax(min-content, max-content);
    grid-template-areas:
      "sidenav header"
      "sidenav main"
      "sidenav footer";
}
  
  /* Give every child element its grid name */

  
.sidenav {
    grid-area: sidenav;
    background-color: #1f2833;
}

.main {
    grid-area: main;
    background-color: #1f2833;
}

.footer {
    grid-area: footer;
}
.header {
  grid-area: header;
}

.header, .footer {
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding: 0 16px;
    background-color: #161b21;
    color: #EDF5E1;
}

.sidenav {
    display: flex; /* Will be hidden on mobile */
    flex-direction: column;
    grid-area: sidenav;
    background-color: #394263;
}

.sidenav__list {
    padding: 0;
    margin-top: 85px;
    list-style-type: none;
}

.sidenav__list-item {
    padding: 20px 20px 20px 40px;
}

.sidenav__list-item a {
  color: #EDF5E1;
}

.sidenav__list-item:hover {
    background-color: rgba(255, 255, 255, 0.2);
    cursor: pointer;
}


/* Main content Area */
.home-container {
    display: grid;
    grid-area: main;
    grid-template-columns: 1fr 2fr;
    grid-template-rows: auto 1fr 1fr;
    grid-gap: 73px
}

.shadow{
  box-shadow:
  inset 0 -3em 3em rgba(0,0,0,0.1),
        0.4em 0.6em 1em rgba(0,0,0,0.3);
}

/* Calender Componets */
.calender-games {
    display: grid;
    grid-template-columns: auto 200px;
    font-size: 18px;
    color: #c5c6c7;
    margin-left: 27px;
    margin-top: 27px;

  }
  .calender-header {
    grid-area: 1/1/2/3;
    background-color: #161b21;
    color: #66fcf1;
    font-size: 20px;
  }

  .match-time {
    display: flex;
    justify-content: center;
    align-items: center;
    color: #66fcf1;
    background-color: #161b21;
    padding-left: 5px;
    padding-right: 10px;

  }
  .teams {
    background-color: #1f2833;
    padding-left: 10px;
    justify-items: center;
  }

/* Home-Page Main Area */
.main-container{
  margin-right: 27px;
  background-color: #1f2833;
  color: #c5c6c7;
  margin-top: 27px;
  overflow: auto;
  max-height: 500px;
}

.main-container input, .main-container .filter-container button {
    background-color: #1f2833;
    color: #b4b6b8;
    border: none;
    outline: none;
}

.main-container .filter-container {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr 1fr;
  color: #b4b6b8;

}

/* Filter DropDown */
/* Dropdown Button */
.dropbtn {
  padding: 16px;
  font-size: 16px;
}

/* The container <div> - needed to position the dropdown content */
.dropdown {
  position: relative;
  display: inline-block;
}

/* Dropdown Content (Hidden by Default) */
.dropdown-content {
  display: none;
  position: absolute;
  z-index: 1;
}

/* Links inside the dropdown */
.dropdown-content button {
  padding: 12px 16px;
  text-decoration: none;
  display: block;
  width:100%;
}

/* Change color of dropdown links on hover */
.dropdown-content button:hover {background-color: #66fcf1;}

/* Show the dropdown menu on hover */
.dropdown:hover .dropdown-content {display: block;}

/* Change the background color of the dropdown button when the dropdown content is shown */
.dropdown:hover .dropbtn {background-color: #1f2833;}

.main-container .table thead{
  color: #66fcf1;
}

.main-container .table thead th {
  background-color: #1f2833;
  border: #1f2833;
  position: sticky;
  top: 0;
}

.main-container .table {
  background-color: #1f2833;
  color: #c5c6c7;
}

.stats-container{
  background-color: gray;
  margin-top: 27px;
  margin-right: 27px;
  box-shadow:
  inset 0 -3em 3em rgba(0,0,0,0.1),
        0.4em 0.6em 1em rgba(0,0,0,0.3);
}

/* PLAYER PAGE */
.player-container{
  display: grid;
  grid-template-rows: repeat(3, 200px);
  grid-gap: 20px;
}

.player-section{
  grid-column: 1 / -1;
}

